--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Test.loader.js";
+      var loaderUrl = buildUrl + "/BestThrowGame-Dora.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Test.data",
-        frameworkUrl: buildUrl + "/Test.framework.js",
-        codeUrl: buildUrl + "/Test.wasm",
+        dataUrl: buildUrl + "/BestThrowGame-Dora.data",
+        frameworkUrl: buildUrl + "/BestThrowGame-Dora.framework.js",
+        codeUrl: buildUrl + "/BestThrowGame-Dora.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Default",
         productName: "Best throw",
